Use List.of/Map.of where possible